--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>Curso Chat</title>
     <link rel="stylesheet" href="css/style.css"/>
+    <link rel="shortcut icon" href="/assets/icons8-whatsapp-50.png" type="image/x-icon">
 </head>
 
 <body>
@@ -38,6 +39,7 @@
     <script src="https://cdn.auth0.com/js/auth0-spa-js/2.0/auth0-spa-js.production.js"></script>
     <script src="js/auth.js"></script>
     <script src="js/backend.js"></script>
+    <script src="js/dom.js"></script>
     <script src="js/main.js"></script>
 </body>
 
